# hyper-admin

./: .aiignore  .copier-answers.yml  .coverage  .coverage.devbox.9962.XJfiIaLx  .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.static  GEMINI.md  JULES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TEST_MATRIX_REPORT.md  babel.cfg  debug_single_test.sh  docker-compose.loadtest.yml  gemini.md  justfile  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run_tests.sh  tailwind.config.js  webpack.config.cjs
.aiassistant/rules/: issue-template.md  project-rules.md  sub-issue-template.md
.claude/: project-config.md  settings.json
.claude/agents/: conductor.md  delivery-manager.md  hyper-admin-code-reviewer.md  oss-triage-auditor.md  project-manager.md
.claude/commands/: bootstrap.md  docs-maintain.md  implement-feature.md  lint.md  milestone-retro.md  optimize.md  oss-triage-audit.md  plan-command.sh  plan-roadmap.md  plan-to-issues-dry-run.md  plan-to-issues.md  plan.md  refactor.md  release.md  run-autonomous-team.md  scaffold.md  start.md  test.md  wt.md
.claude/container/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  justfile
.claude/experiments/: ppu-alpha-prompt.md  ppu-analysis-report.md  ppu-analyst-prompt.md  ppu-beta-prompt.md  ppu-gamma-prompt.md
.claude/hooks/: fetch-rules.sh
.claude/rules/: bdd-conventions.md  code-style.md  git-workflow.md  planning-playbook.md  sdd-conventions.md  testing.md
.devcontainer/: devcontainer.json
.gemini/: settings.json  styleguide.md
.gemini/prompts/: swarm_worker.toml
.gemini/scripts/: capacity_manager.py  swarm_orchestrator.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-memory.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  spec_review.md
.github/commands/: gemini-review.toml
.github/jules/: instructions.md
.github/workflows/: ci.yml  code-review.yml  community.yml  demo-deploy.yml  gemini-dispatch.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  loadtest.yml  pages.yml  publish.yml  qa.yml  release.yml  scheduled.yml  test.yml
.junie/: guidelines.md
.meta/roadmap/: roadmap.yaml
.meta/stories/: 131-implement-the-hyperadminrouting-module-to-dynamically-ge.md  132-create-the-engine-to-generate-apirouter-for-basic-list-a.md  141-set-up-the-project-structure-for-jinja2-templates-tailwi.md  142-create-the-main-dashboard-layout-template-fixed-header-c.md  1421-implement-the-basic-list-view-template.md  1422-add-pagination-to-the-list-view.md  1423-add-sorting-to-the-list-view.md  1424-add-filter-bar-and-fix-list-view-table-overflow.md  143-develop-the-generic-list-view-template-to-render-a-table.md  1431-implement-the-create-view-template.md  1432-implement-form-handling-and-validation.md  1433-implement-htmx-integration-for-form-submission.md  144-develop-the-generic-createedit-form-template-to-render-f.md  1441-implement-the-update-view-template.md  1442-implement-form-pre-population-with-existing-data.md  1443-implement-htmx-integration-for-form-submission.md  1451-implement-the-detail-view-template.md  1452-add-htmx-integration-for-dynamic-interactions.md  211-implement-listdisplay-functionality-supporting-model-fie.md  212-implement-listfilter-functionality-including-backend-log.md  213-implement-searchfields-functionality-including-the-ui-se.md  221-implement-fields-and-fieldsets-attributes-for-controllin.md  222-implement-readonlyfields-functionality-to-display-non-ed.md  231-design-and-implement-the-actions-framework-for-defining-.md  232-add-ui-elements-actions-dropdown-execute-button-to-the-l.md  233-implement-the-backend-endpoint-to-execute-a-selected-act.md  241-implement-client-side-interactivity-sidebar-toggle-dropd.md  242-refine-all-templates-for-a-polished-and-consistent-desig.md  chore-add-priority-labels-to-all-open-issues.md  chore-link-195-orphan-stories-to-their-parent-epics.md  chore-triage-179-stale-todo-issues-close-obsolete-prioritize.md  choreexamples-restructure-examples-move-simple-app-delete-rb.md  chorepm-rename-milestone-15-and-create-responsive-sdd.md  docs-erp-example-readme-with-run-instructions-and-seed-comma.md  docs-multi-tenant-usage-patterns.md  docs-research-community-donation-options-to-fund-claude-max-.md  docs-responsive-design-guide-and-breakpoint-reference.md  docs-update-examples-to-use-hyperadminsettings.md  docsspec-sdd-for-pydantic-settings-hyperadminsettings.md  docsspec-sdd-for-real-time-connection-foundation.md  (+165 more)
.meta/sync/: github-config.yaml
docs/: changelog.md  contributing.md  demo.md  examples.md  getting-started.md  index.md  roadmap.md  tutorial.md
docs/agentic-workflow/: code-review-agent.md  community-ingestion.md  cost-model.md  deep-research-agent.md  dev-agents.md  index.md  models-setup.md  onboarding-agents.md  onboarding-humans.md  onboarding.md  orchestration.md  oss-triage-auditor.md  qa-agent.md  release-agent.md  roadmap-planning-agent.md  scheduled-agent.md  sync-to-template-plan.md  workflow-diagram.html
docs/api/: adapters.md  application.md  core.md  index.md  routing.md  views.md
docs/community/: donations.md
docs/demos/: v0-2-1-dx-and-examples.md  v0-3-0-zero-config-and-auth.md  v0-3-1-file-uploads.md  v0-5-0-advanced-ux.md
docs/design/: UI-KIT-RFC.md  palette-preview.html
docs/examples/: erp.md
docs/frontend/: htmx_patterns.md  overview.md  widgets.md
examples/: admin.py  auth_test_app.py  docker-compose.yml  models.py  simple_app.py
hyperadmin/: main.py  views.py
my-new-project/: .copier-answers.yml  .gitignore  AGENTS.md  README.md  pyproject.toml
personas/: architect_patternist.md  documentation_support.md  jules_master.md  project_manager.md  senior_fullstack_developer.md  test_automation.md
scripts/: bootstrap.sh  gitpm.sh  lint.sh  redeploy-example.sh  release.sh  secure-repo.sh  setup-github.sh  triage_audit.py
tests/: conftest.py  test_basic.py  test_import.py
(+805 files in other folders)
