[build-system]  # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "hyperadmin"
version = "0.0.0"
description = "A modern, Pydantic-native admin interface for FastAPI, powered by HTMX."
readme = "README.md"
authors = [
  { name = "Jules", email = "jules@example.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = [
  "fastapi>=0.100.0",
  "pydantic>=2.0",
  "uvicorn>=0.20.0",
  "jinja2>=3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "sqlmodel>=0.0.12",
]

[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
homepage = "https://github.com/yevheniidehtiar/hyperadmin"
source = "https://github.com/yevheniidehtiar/hyperadmin"
changelog = "https://github.com/yevheniidehtiar/hyperadmin/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/yevheniidehtiar/hyperadmin/releases"
documentation = "https://github.com/yevheniidehtiar/hyperadmin"
issues = "https://github.com/yevheniidehtiar/hyperadmin/issues"

[project.optional-dependencies]
dev = [
  "commitizen (>=4.3.0)",
  "coverage[toml] (>=7.6.10)",
  "ipykernel (>=6.29.4)",
  "ipython (>=8.18.0)",
  "ipywidgets (>=8.1.2)",
  "mypy (>=1.14.1)",
  "pdoc (>=15.0.1)",
  "pip-audit (>=2.7.3)",
  "pip-licenses (>=4.3.5)",
  "httpx>=0.23.0",
  "playwright (>=1.46.0)",
  "poethepoet (>=0.32.1)",
  "pre-commit (>=4.0.1)",
  "pytest (>=8.3.4)",
  "pytest-cov (>=5.0.0)",
  "pytest-playwright (>=0.5.1)",
  "pytest-mock (>=3.14.0)",
  "pytest-xdist (>=3.6.1)",
  "ruff (>=0.9.2)",
  
]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
mypy_path = "src/hyperadmin"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml --cov=src --cov-report=term-missing --cov-report=xml:reports/coverage.xml"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["A", "ASYNC", "E", "F", "FLY", "FURB", "I", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PL", "PT", "Q", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT"]
ignore = ["E501", "G010", "PGH003", "RET504", "S101", "S307"]
unfixable = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe.executor]  # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

  [tool.poe.tasks.docs]
  help = "Generate this package's docs"
  cmd = """
    pdoc
      --docformat $docformat
      --output-directory $outputdirectory
      hyperadmin
    """

    [[tool.poe.tasks.docs.args]]
    help = "The docstring style (default: numpy)"
    name = "docformat"
    options = ["--docformat"]
    default = "numpy"

    [[tool.poe.tasks.docs.args]]
    help = "The output directory (default: docs)"
    name = "outputdirectory"
    options = ["--output-directory"]
    default = "docs"

  [tool.poe.tasks.lint]
  help = "Lint this package"
  cmd = "pre-commit run --all-files --color always"

  [tool.poe.tasks.security-check]
  help = "Run security checks"
  sequence = [
    { cmd = "poe license-check" },
    { cmd = "poe vulnerability-check" },
  ]

  [tool.poe.tasks.vulnerability-check]
  help = "Check this package's dependencies for vulnerabilities"
  cmd = "pip-audit --format markdown"

  [tool.poe.tasks.license-check]
  help = "Check this package's dependencies for license issues"
  cmd = "pip-licenses --format=markdown"

  [tool.poe.tasks.test]
  help = "Test this package"
  sequence = [
    { shell = "playwright install --with-deps" },
    { cmd = "pytest" },
  ]

  [tool.poe.tasks."test:unit"]
  help = "Run unit tests with pytests"
  sequence = [
    { cmd = "pytest -vv -q tests/unit" },
  ]
  [tool.poe.tasks."test:e2e"]
  help = "Run end-to-end tests with Playwright"
  sequence = [
    { shell = "playwright install --with-deps" },
    { cmd = "pytest tests/e2e" },
  ]
