[build-system]  # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "hyperadmin"
version = "0.0.0"
description = "A modern, Pydantic-native admin interface for FastAPI, powered by HTMX."
readme = "README.md"
authors = [
  { name = "Yevhenii Dehtiar", email = "yevhenii.dehtiar@gmail.com" },
  { name = "Jules", email = "jules@google.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = [
  "appnope>=0.1.3",
  "fastapi>=0.100.0",
  "pydantic>=2.7; python_version < '3.13'",
  "pydantic>=2.11; python_version >= '3.13'",
  "uvicorn>=0.20.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.14",
  "sqlmodel>=0.0.19",
  "httpx>=0.23.0",
  "greenlet>=1.0.1; python_version < '3.13'",
  "greenlet>=3.1.0; python_version >= '3.13'",
  "pillow>=11.3.0",
  "typing-extensions>=4.14.1",
]

[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
homepage = "https://github.com/yevheniidehtiar/hyper-admin"
source = "https://github.com/yevheniidehtiar/hyper-admin"
changelog = "https://github.com/yevheniidehtiar/hyper-admin/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/yevheniidehtiar/hyper-admin/releases"
documentation = "https://github.com/yevheniidehtiar/hyper-admin"
issues = "https://github.com/yevheniidehtiar/hyper-admin/issues"

[project.optional-dependencies]
dev = [
  "cffi (>=1.15.1)",
  "commitizen (>=4.3.0)",
  "coverage[toml] (>=7.6.10)",
  "matplotlib (>=3.7.2)",
  "mypy (>=1.14.1)",
  "nodeenv (>=1.7.0)",
  "pip-audit (>=2.7.3)",
  "pip-licenses (>=4.3.5)",
  "httpx>=0.23.0",
  "playwright (>=1.46.0)",
  "poethepoet (>=0.32.1)",
  "pre-commit (>=4.0.1)",
  "pytest (>=8.3.4)",
  "pytest-cov (>=5.0.0)",
  "pytest-playwright (>=0.5.1)",
  "pytest-mock (>=3.14.0)",
  "aiosqlite (>=0.21.0)",
  "pytest-xdist (>=3.6.1)",
  "pyzmq (>=27.0.2)",
  "ruff (>=0.9.2)",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.24.0",
  "mkdocs-macros-plugin>=1.0.0",
  "mdx-include>=1.4.1",
  "mkdocs-redirects>=1.2.1",
  "griffe-typingdoc>=0.2.0",
  "pyyaml>=6.0",
  "setuptools (>=79.0.0)",
  "numpy (>=2.0.2); python_version >= '3.12'",
]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "$MYPY_CONFIG_FILE_DIR/reports/mypy.xml"
mypy_path = "src"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml --cov=src --cov-report=term-missing --cov-report=xml:reports/coverage.xml"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = "ignore:The `name` is not the first parameter anymore:DeprecationWarning"
asyncio_mode = "auto"

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["A", "ASYNC", "E", "F", "FLY", "FURB", "I", "ISC", "LOG", "N", "NPY", "PERF", "PGH", "PIE", "PL", "PT", "Q", "RET", "RUF", "RSE", "SIM", "TID", "UP", "W", "YTT"]
ignore = ["E501", "G010", "PGH003", "RET504", "S101", "S307"]
unfixable = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe.executor]  # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

  [tool.poe.tasks."docs:build"]
  help = "Build the documentation site"
  cmd = "mkdocs build"

  [tool.poe.tasks."docs:serve"]
  help = "Serve the documentation site"
  cmd = "mkdocs serve --dev-addr localhost:8080"

  [tool.poe.tasks."docs:deploy"]
  help = "Deploy the documentation to GitHub Pages"
  cmd = "mkdocs gh-deploy --force"

  [tool.poe.tasks.lint]
  help = "Lint this package"
  cmd = "pre-commit run --all-files --color always"

  [tool.poe.tasks.security-check]
  help = "Run security checks"
  sequence = [
    { cmd = "poe license-check" },
    { cmd = "poe vulnerability-check" },
  ]

  [tool.poe.tasks.vulnerability-check]
  help = "Check this package's dependencies for vulnerabilities"
  cmd = "pip-audit --format markdown"

  [tool.poe.tasks.license-check]
  help = "Check this package's dependencies for license issues"
  cmd = "pip-licenses --format=markdown"

  [tool.poe.tasks.test]
  help = "Test this package"
  sequence = [
    { ref = "test:unit" },
    { ref = "test:e2e" },
  ]

  [tool.poe.tasks."test:unit"]
  help = "Run unit tests with pytests"
  sequence = [
    { cmd = "pytest -vv -q tests/unit" },
  ]
  [tool.poe.tasks."test:e2e"]
  help = "Run end-to-end tests with Playwright"
  sequence = [
    { shell = "playwright install chromium" },
    { cmd = "pytest tests/e2e" },
  ]

  [tool.poe.tasks."test:e2e:fast"]
  help = "Run end-to-end tests with Playwright (fast with screenshots)"
  sequence = [
    { shell = "playwright install chromium" },
    { shell = "E2E_TEST_TIMEOUT=5000 pytest tests/e2e --screenshot on" },
  ]

  [tool.poe.tasks."static:build-css"]
  help = "Build Tailwind CSS using Docker"
  cmd = "docker build -f Dockerfile.static -t hyperadmin-tailwind-builder --output type=local,dest=./src/hyperadmin/static/css ."
