[build-system]  # https://docs.astral.sh/uv/concepts/projects/config/#build-systems
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]  # https://packaging.python.org/en/latest/specifications/pyproject-toml/
name = "hyper-admin"
version = "0.1.0"
description = "A modern, Pydantic-native admin interface for FastAPI, powered by HTMX."
readme = "README.md"
authors = [
  { name = "Yevhenii Dehtiar", email = "yevhenii.dehtiar@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
  "appnope>=0.1.3",
  "fastapi[standard]>=0.116.0",
  "fastapi-storages>=0.1.0",
  "pydantic>=2.7; python_version < '3.13'",
  "pydantic>=2.11; python_version >= '3.13'",
  "uvicorn>=0.20.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.14",
  "sqlmodel>=0.0.19",
  "httpx>=0.23.0",
  "greenlet>=1.0.1; python_version < '3.13'",
  "greenlet>=3.1.0; python_version >= '3.13'",
  "pillow>=12.2.0",
  "typing-extensions>=4.14.1",
  "typer>=0.12",
  "argon2-cffi",
  "itsdangerous>=2.0",
  "python-multipart>=0.0.26",
  "babel>=2.13"
]

[project.scripts]
hyperadmin = "hyperadmin.__main__:app"

[project.urls]  # https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage = "https://github.com/yevheniidehtiar/hyper-admin"
Repository = "https://github.com/yevheniidehtiar/hyper-admin"
Documentation = "https://yevheniidehtiar.github.io/hyper-admin"
Changelog = "https://github.com/yevheniidehtiar/hyper-admin/blob/main/CHANGELOG.md"
Issues = "https://github.com/yevheniidehtiar/hyper-admin/issues"

[project.optional-dependencies]
dev = [
  "cffi>=2.0.0",
  "commitizen>=4.13.9",
  "coverage[toml]>=7.13.5",
  "matplotlib>=3.10.8",
  "mypy>=1.19.1",
  "nodeenv>=1.10.0",
  "pip-audit>=2.10.0",
  "pip-licenses>=5.5.1",
  "httpx>=0.23.0",
  "playwright>=1.58.0",
  "poethepoet>=0.42.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-playwright>=0.7.2",
  "pytest-mock>=3.15.1",
  "aiosqlite>=0.22.1",
  "basedpyright>=1.30.1",
  "pytest-xdist>=3.6.1",
  "pyzmq>=27.1.0",
  "ruff==0.15.8",
  "mkdocs>=1.6.1,<2.0",
  "mkdocs-material>=9.7.5",
  "mkdocstrings[python]>=1.0.3",
  "mkdocs-macros-plugin>=1.5.0",
  "mdx-include>=1.4.1",
  "mkdocs-redirects>=1.2.1",
  "griffe-typingdoc>=0.3.1",
  "pyyaml>=6.0.3",
  "setuptools>=82.0.1",
  "numpy>=2.4.3; python_version >= '3.12'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hyperadmin"]

[tool.commitizen]  # https://commitizen-tools.github.io/commitizen/config/
bump_message = "bump: v$current_version → v$new_version"
tag_format = "v$version"
update_changelog_on_bump = true
version_provider = "uv"
changelog_file = "CHANGELOG.md"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true
exclude_lines = [
    "raise NotImplementedError",
]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "$MYPY_CONFIG_FILE_DIR/reports/mypy.xml"
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.basedpyright]  # https://docs.basedpyright.com/latest/configuration/config-files/
typeCheckingMode = "standard"
include = ["src"]
pythonVersion = "3.10"
reportAny = false  # Too much noise for now

[tool.pytest.ini_options]  # https://docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml --cov=src --cov-report=term-missing --cov-report=xml:reports/coverage.xml"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = "ignore:The `name` is not the first parameter anymore:DeprecationWarning"
asyncio_mode = "auto"

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
exclude = [".claude"]
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins (shadowing builtins)
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear (common bug patterns)
  "C4",     # flake8-comprehensions (simplify comprehensions)
  "DTZ",    # flake8-datetimez (timezone-aware datetime)
  "E",      # pycodestyle errors
  "ERA",    # eradicate (commented-out code)
  "F",      # pyflakes (unused imports, undefined names)
  "FLY",    # flynt (f-string conversion)
  "FURB",   # refurb (modernize)
  "I",      # isort (import ordering)
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "N",      # pep8-naming
  "NPY",    # numpy-specific
  "PERF",   # perflint (performance anti-patterns)
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie (misc. lint)
  "PL",     # pylint subset (PLR, PLC, PLE, PLW)
  "PT",     # flake8-pytest-style (test conventions)
  "Q",      # flake8-quotes
  "RET",    # flake8-return (return statement issues)
  "RSE",    # flake8-raise (raise statement issues)
  "RUF",    # ruff-specific rules
  "S",      # flake8-bandit (security)
  "SIM",    # flake8-simplify
  "T20",    # flake8-print (leftover prints)
  "TCH",    # flake8-type-checking (TYPE_CHECKING imports)
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade (modernize syntax)
  "W",      # pycodestyle warnings
  "YTT",    # flake8-2020
]
ignore = [
  "E501",    # line too long (handled by formatter)
  "G010",    # logging.warn deprecated
  "PGH003",  # blanket type: ignore
  "RET504",  # unnecessary variable before return
  "S307",    # eval usage (used intentionally)
]
unfixable = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ARG001",   # unused function arguments (fixtures)
  "ARG002",   # unused method arguments (fixtures)
  "ARG005",   # unused lambda arguments (mock factories)
  "E402",     # module-level import not at top (test setup)
  "N811",     # constant imported under a non-constant alias (avoids name clash)
  "PLC0415",  # import outside top-level (lazy imports in fixtures)
  "PLR0913",  # too many arguments (parametrized tests)
  "PLR2004",  # magic value comparisons (assert against literals)
  "PT018",    # composite assertions (readable multi-condition asserts)
  "PT019",    # underscore-prefixed fixture params (intentional naming)
  "RUF002",   # ambiguous unicode in docstrings (× in i18n test data)
  "RUF003",   # ambiguous unicode in comments (× in i18n test data)
  "RUF012",   # mutable class default (test helper classes)
  "S101",     # assert usage (tests must use assert)
  "S104",     # binding to all interfaces (test server fixtures)
  "S105",     # hardcoded password (test fixtures)
  "S106",     # hardcoded credentials (test fixtures)
  "S110",     # try-except-pass (process cleanup in fixtures)
  "S603",     # subprocess without shell (test server fixtures)
  "S701",     # jinja2 autoescape=False (test-only template rendering)
  "T20",      # print statements (test debugging output)
  "TC001",    # test apps resolve FastAPI/Pydantic hints at runtime — keep runtime imports
  "TC002",    # ditto (third-party, e.g. starlette Request in route signatures)
  "TC003",    # ditto (stdlib, e.g. collections.abc / pathlib in annotated fixtures)
  "W505",     # doc line too long (test docstrings)
]
"src/hyperadmin/core/app.py" = ["PLC0415", "PLR0913"]  # lazy imports; Admin() exposes many config knobs
"src/hyperadmin/auth/views.py" = ["PLR0913"]     # auth view constructor wires many collaborators
"src/hyperadmin/core/model.py" = ["E402"]        # late import to break circular deps
"src/hyperadmin/core/registry.py" = ["PLC0415"]  # lazy imports to break circular deps
"src/hyperadmin/routing.py" = ["PLC0415"]        # lazy imports to break circular deps
"examples/**/*.py" = [
  "ARG001",   # unused function arguments (lifespan signature)
  "S101",     # assert in examples
  "S104",     # binding to all interfaces (examples run locally)
  "T20",      # print statements in examples
]
"main.py" = ["S104"]  # binding to all interfaces (local dev entry point)
"src/hyperadmin/core/options.py" = ["TC001", "TC003"]  # Pydantic needs runtime access to field types
"src/hyperadmin/core/adapters.py" = ["TC003"]  # Callable used in runtime-evaluated type alias
"src/hyperadmin/realtime/*.py" = ["TC001", "TC002", "TC003"]  # SSE/WS routes resolve Request/Settings hints at runtime
"src/hyperadmin/views/forms.py" = ["PLR0913", "PLR2004"]  # complex constructors, index arithmetic
"scripts/*.py" = [
  "ARG001",   # unused function arguments (callback signatures)
  "DTZ011",   # date.today() (timezone-naive is fine for reports)
  "PLR0912",  # too many branches (complex report logic)
  "PLR0915",  # too many statements (complex report logic)
  "PLR2004",  # magic value comparisons (scoring thresholds)
  "S607",     # partial executable paths (gh CLI)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
known-first-party = ["hyperadmin"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 7
max-returns = 8
max-branches = 12

[tool.poe.executor]  # https://github.com/nat-n/poethepoet
type = "simple"

[tool.poe.tasks]

  [tool.poe.tasks."docs:build"]
  help = "Build the documentation site"
  cmd = "mkdocs build"

  [tool.poe.tasks."docs:serve"]
  help = "Serve the documentation site"
  cmd = "mkdocs serve --dev-addr localhost:8080"

  [tool.poe.tasks."docs:deploy"]
  help = "Deploy the documentation to GitHub Pages"
  cmd = "mkdocs gh-deploy --force"

  [tool.poe.tasks.typecheck]
  help = "Run basedpyright type checker"
  cmd = "basedpyright src"

  [tool.poe.tasks.lint]
  help = "Lint this package"
  cmd = "pre-commit run --all-files --color always"

  [tool.poe.tasks.security-check]
  help = "Run security checks"
  sequence = [
    { cmd = "poe license-check" },
    { cmd = "poe vulnerability-check" },
  ]

  [tool.poe.tasks.vulnerability-check]
  help = "Check this package's dependencies for vulnerabilities"
  # GHSA-4xh5-x5gv-qwph is a false positive for this project, as it's a vulnerability in pypy-3.11, and this project uses CPython.
  # CVE-2026-4539: pygments vulnerability; pygments is a dev-only dep (rich, mkdocs-material, pytest) — not a runtime dep of this library. No fix available yet.
  # CVE-2026-25645: requests vulnerability; requests is a dev-only transitive dep (mkdocs, pip-audit, pytest-base-url). Fix: requests>=2.33.0.
  # CVE-2026-3219 / CVE-2026-6357: pip vulnerabilities in pip itself (the package manager, not a runtime dep of this library). Tracked upstream; no action required by this project.
  # --skip-editable: don't try to audit this project's own editable install (hyper-admin
  # isn't on PyPI, which otherwise aborts the audit). Third-party deps are still audited.
  cmd = "pip-audit --skip-editable --format markdown --ignore-vuln GHSA-4xh5-x5gv-qwph --ignore-vuln CVE-2026-4539 --ignore-vuln CVE-2026-25645 --ignore-vuln CVE-2026-3219 --ignore-vuln CVE-2026-6357"

  [tool.poe.tasks.license-check]
  help = "Check this package's dependencies for license issues"
  cmd = "pip-licenses --format=markdown"

  [tool.poe.tasks.test]
  help = "Test this package"
  sequence = [
    { ref = "test:unit" },
    { ref = "test:e2e" },
  ]

  [tool.poe.tasks."test:unit"]
  help = "Run unit tests with pytests"
  sequence = [
    { cmd = "pytest -vv -q tests/unit" },
  ]
  [tool.poe.tasks."test:e2e"]
  help = "Run end-to-end tests with Playwright"
  sequence = [
    { shell = "playwright install chromium" },
    { cmd = "pytest tests/e2e" },
  ]

  [tool.poe.tasks."test:e2e:fast"]
  help = "Run end-to-end tests with Playwright (fast with screenshots)"
  sequence = [
    { shell = "playwright install chromium" },
    { shell = "E2E_TEST_TIMEOUT=5000 pytest tests/e2e --screenshot on" },
  ]

  [tool.poe.tasks."triage:audit"]
  help = "Run OSS triage audit (dry-run by default). Pass 'live' for mutations."
  cmd = "python scripts/triage_audit.py"

  [tool.poe.tasks."i18n:extract"]
  help = "Extract translatable strings from src/hyperadmin to messages.pot"
  cmd = "pybabel extract -F babel.cfg -o messages.pot ."

  [tool.poe.tasks."i18n:compile"]
  help = "Compile .po files to .mo for runtime use"
  cmd = "pybabel compile -d src/hyperadmin/locale"

  [tool.poe.tasks."i18n:update"]
  help = "Update existing .po files from a fresh .pot extraction"
  sequence = [
    { cmd = "poe i18n:extract" },
    { cmd = "pybabel update -i messages.pot -d src/hyperadmin/locale" },
  ]

  [tool.poe.tasks."deps:bump"]
  help = "Bump dev deps to latest and verify across the compatibility matrix"
  shell = """
set -e

cleanup() {
  echo ""
  echo "==> Restoring default environment (highest resolution)..."
  uv sync --all-extras --resolution highest 2>/dev/null || true
}
trap cleanup EXIT

echo "==> Upgrading lock file to latest compatible versions..."
uv lock --upgrade

COMBOS="3.10:lowest-direct 3.13:lowest-direct 3.13:highest"

for combo in $COMBOS; do
  pyver="${combo%%:*}"
  resolution="${combo##*:}"
  echo ""
  echo "=========================================="
  echo "==> Python $pyver + $resolution"
  echo "=========================================="
  uv sync --all-extras --python "$pyver" --resolution "$resolution"
  uv run poe lint
  uv run poe test:unit
  uv run poe security-check
done

echo ""
echo "==> All checks passed across the compatibility matrix."
"""

[dependency-groups]
dev = [
    "faker>=40.11.0",
]

